build_and_deploy/deploy_app/bot_service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingera-sb-service
spec:
  selector:
    app: pingera-sb
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
